name:           hspkcs11
version:        0.1
synopsis:       Wrapper for PKCS #11 interface
homepage:       https://github.com/denisenkom/hspkcs11
license:        MIT
license-file:   LICENSE
author:         Mikhail Denisenko
category:       Cryptography
build-type:     Simple
cabal-version:  >=1.10
extra-source-files: include/*.h

library
    build-tools:    c2hs
    build-depends:
        base,
        unix,
        utf8-string,
        bytestring,
        RSA,
        crypto-api
    Include-dirs: include
    exposed-modules:
        Pkcs11
    Default-language:  Haskell2010

executable pkcs11-tests
    main-is:            Test.hs
    Include-dirs: include
    other-modules:      Pkcs11
    build-depends:
        base,
        testpack,
        unix,
        utf8-string,
        bytestring,
        RSA,
        crypto-api,
        cprng-aes,
        cipher-aes
    default-language:   Haskell2010
