name:           hspkcs11
version:        0.7
synopsis:       Wrapper for PKCS #11 interface
description:    This package allows to call PKCS#11 provider libraries.  PKCS#11 is a C interface specification for cryptography providers, such as crypto tokens and HSMs
homepage:       https://github.com/denisenkom/hspkcs11
license:        MIT
license-file:   LICENSE
author:         Mikhail Denisenko
maintainer:     denisenkom@gmail.com
category:       Cryptography
build-type:     Simple
cabal-version:  >=1.10
extra-source-files: include/*.h

library
    hs-source-dirs: src
    build-tools:    c2hs
    build-depends:
        base >= 4.9 && < 4.11,
        utf8-string,
        bytestring
    if os(windows)
        build-depends: Win32
    else
        build-depends: unix
    Include-dirs: include
    exposed-modules:
        System.Crypto.Pkcs11
        System.Crypto.Pkcs11.Lazy
        Bindings.Pkcs11
        Bindings.Pkcs11.Attribs
    Default-language:  Haskell2010

test-suite pkcs11-tests
    hs-source-dirs: tests
    type: exitcode-stdio-1.0
    main-is:            Test.hs
    build-depends:
        base,
        hspkcs11,
        utf8-string,
        bytestring,
        base64-bytestring,
        crypto-api,
        cprng-aes,
        cipher-aes,
        RSA,
        HUnit
    default-language:   Haskell2010

source-repository head
    type: git
    location: https://github.com/denisenkom/hspkcs11.git
